[package]
name = "page2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "json"] } # 根据需要选择异步或同步特性
serde = { version = "1.0.195", features = ["derive"] } # 如果你需要序列化/反序列化数据
serde_json = "1.0.111" # 如果你需要处理 JSON 数据